# agentknit

./: .gitignore  README.md  async_agent.py  pyproject.toml  secondguess_agent.py  specification.md  test_cache_cold.py  test_claude_md.py  test_compaction.py  test_events.py  test_resume_command.py  test_sandbox.py  test_schema_fields.py  test_slash_agent.py  test_snapshot_metadata.py  test_tool.py  test_tool_spec.py  tool_schema_deepseek-v4-flash.json  tool_schema_kimi-k2.6.json  tool_schema_north-mini-code-free.json
.github/workflows/: ci.yml  publish.yml
agentknit/: __init__.py  _core.py  _tool_spec.py  exceptions.py  keys.py  openai_compat.py  sandbox.py  slash_commands.py  tool.py  tool_library.py
