[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentknit"
version = "0.1.0"
description = "Spec-driven coding agent framework: knits tool dispatch and model calls into an agent loop for any OpenAI-compatible endpoint."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "llmprobe>=0.1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
keyring = ["keyring>=25"]

[project.scripts]
agentknit = "agentknit:main"

[tool.setuptools.packages.find]
include = ["agentknit*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
